--- a/app/src/main/res/layout/activity_main3.xml
+++ b/app/src/main/res/layout/activity_main3.xml
@@ -4,53 +4,54 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/back"
     tools:context=".MainActivity3">
 
     <TextView
         android:id="@+id/age_label2"
         android:layout_width="74dp"
         android:layout_height="34dp"
-        android:layout_marginStart="44dp"
-        android:layout_marginLeft="44dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="52dp"
+        android:layout_marginEnd="72dp"
+        android:layout_marginRight="72dp"
         android:text="phone :"
         android:textSize="20sp"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/phone3"
         app:layout_constraintTop_toBottomOf="@+id/age_label" />
 
     <TextView
         android:id="@+id/phone3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="52dp"
-        android:layout_marginLeft="52dp"
-        android:layout_marginTop="36dp"
+        android:layout_marginTop="64dp"
+        android:layout_marginEnd="72dp"
+        android:layout_marginRight="72dp"
         android:text="TextView"
         android:textColor="#1E1D1D"
         android:textSize="26sp"
-        app:layout_constraintStart_toEndOf="@+id/age_label2"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/age3" />
 
     <TextView
         android:id="@+id/age3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="52dp"
-        android:layout_marginLeft="52dp"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="84dp"
+        android:layout_marginEnd="68dp"
+        android:layout_marginRight="68dp"
         android:text="TextView"
         android:textColor="#1E1D1D"
         android:textSize="26sp"
-        app:layout_constraintStart_toEndOf="@+id/age_label"
-        app:layout_constraintTop_toBottomOf="@+id/prenom3" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/image3" />
 
     <TextView
         android:id="@+id/nom3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="44dp"
-        android:layout_marginLeft="44dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginStart="60dp"
+        android:layout_marginLeft="60dp"
+        android:layout_marginTop="72dp"
         android:text="TextView"
         android:textColor="#1E1D1D"
         android:textSize="26sp"
@@ -61,35 +62,35 @@
         android:id="@+id/prenom3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="76dp"
-        android:layout_marginLeft="76dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="72dp"
+        android:layout_marginEnd="56dp"
+        android:layout_marginRight="56dp"
         android:text="TextView"
         android:textColor="#131313"
         android:textSize="26sp"
-        app:layout_constraintStart_toEndOf="@+id/nom3"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/image3"
-        android:layout_width="230dp"
-        android:layout_height="230dp"
-        android:layout_marginStart="68dp"
-        android:layout_marginLeft="68dp"
-        android:layout_marginBottom="52dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_width="180dp"
+        android:layout_height="145dp"
+        android:layout_marginTop="24dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/prenom3"
         tools:srcCompat="@tools:sample/avatars" />
 
     <TextView
         android:id="@+id/age_label"
         android:layout_width="74dp"
-        android:layout_height="35dp"
-        android:layout_marginStart="44dp"
-        android:layout_marginLeft="44dp"
-        android:layout_marginTop="60dp"
+        android:layout_height="35sp"
+        android:layout_marginTop="84dp"
+        android:layout_marginEnd="72dp"
+        android:layout_marginRight="72dp"
         android:text="age :"
         android:textSize="20sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/nom3" />
+        app:layout_constraintEnd_toStartOf="@+id/age3"
+        app:layout_constraintTop_toBottomOf="@+id/image3" />
 </androidx.constraintlayout.widget.ConstraintLayout>
